cmake_minimum_required(VERSION 4.2)
project(My_Cpp_SchoolWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(HelloWorld HelloWorld.cpp)
add_executable(TestMath TestMath.cpp)
add_executable(Classes Classes.cpp)
add_executable(Functions Functions.cpp)
add_executable(inOut2 inOut2.cpp)
add_executable(loops loops.cpp)
add_executable(MoreIntro MoreIntro.cpp)
add_executable(PizzaClass PizzaClass.cpp)
add_executable(RetailClass RetailClass.cpp)
add_executable(validationTest validationTest.cpp)
add_executable(vector vector.cpp)